# umbrelaviewer

./: .gitignore  CMakeLists.txt  build.bat
.github/workflows/: release.yml
installer/: UmbrelaViewer.nsi
src/: inputhandler.cpp  inputhandler.h  main.cpp  protocol.h  resources.rc  screencap.cpp  screencap.h
tools/: gen_icon.cpp
